samples/_failures_safe/1761153653_fa7799_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ffcdcfb5.c: In function ‘parse_statement’:
./samples/SAFE/__tmp_ffcdcfb5.c:179:5: error: expected declaration or statement at end of input
  179 |     }
      |     ^
